# MarcusDunn_openapi-forge

./: CHANGELOG.md  Cargo.toml  action.yml  rust-toolchain.toml
.github/: RELEASE_CHECKLIST.md
.github/actions/publish-crate/: action.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  fuzz.yml  release.yml  update-action-tag.yml
crates/forge-cli/: Cargo.toml
crates/forge-cli/src/: oci.rs
crates/forge-host/src/: runtime.rs
crates/forge-ir-bindgen/src/: bindings.rs
crates/forge-ir/src/: value.rs
crates/forge-parser/src/: diag.rs  lib.rs  normalize.rs  operations.rs  security.rs
crates/forge-plugin-itests/tests/: generator_rust_reqwest.rs  generator_typescript_cli.rs  real_world.rs
crates/forge-plugin-sdk/: Cargo.toml
docs/: parser-coverage.md
plugins/generator-go-server/: build.sh  main.go
plugins/generator-typescript-cli/src/emit/: auth.ts  cli.ts  client.ts  models.ts
xtask/: Cargo.toml
