[package]
# `forge-cli` was already taken on crates.io (Aptos Move tooling), so the
# crate ships as `openapi-forge-cli`. The installed binary is still `forge`
# (see `[[bin]]` below).
name = "openapi-forge-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "OpenAPI Forge command-line interface"

[lints]
workspace = true

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
forge-ir = { workspace = true }
forge-host = { workspace = true }
forge-parser = { workspace = true }
forge-pipeline = { workspace = true }
clap = { workspace = true }
figment = { workspace = true }
miette = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = "1.1"
jsonschema = { workspace = true }
oci-client = { version = "0.17", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["rt", "macros"] }
dirs = "6"
sha2 = "0.11"
hex = "0.4"

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
wiremock = "=0.6.5"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
